--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!-- browser-sync start --server --directory --files "*"-->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,6 +9,6 @@
     <title>Hello Coursera!</title>
 </head>
 <body>
-<h1>Hello Coursera! It's a great course!</h1>
+<h1>Hello Coursera!</h1>
 </body>
 </html>
