--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
-<!-- browser-sync start --server --directory --files "*"-->
+<!-- browser-sync start --server --directory --files "*"
+https://jsfiddle.net
+-->
 
 <!DOCTYPE html>
 <html lang="en">
@@ -10,5 +12,12 @@
 </head>
 <body>
 <h1>Hello Coursera!</h1>
+<footer>
+    <hr>
+    <p style="text-align: center;"
+       onclick="alert('EMAILING US IS USELESS');">
+       hi
+    </p>
+</footer>
 </body>
 </html>
